--- a/GazdalkodjOkosan/Gazdalkodj_Okosan/MainWindow.xaml
+++ b/GazdalkodjOkosan/Gazdalkodj_Okosan/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button Content="Játék indítása" Height="23" HorizontalAlignment="Left" Margin="27,22,0,0" Name="button1" VerticalAlignment="Top" Width="88" Click="button1_Click" />
+        <Button Content="Csatlakozás egy játékhoz" Height="23" HorizontalAlignment="Right" Margin="0,22,62,0" Name="button2" VerticalAlignment="Top" Width="142" Click="button2_Click" />
     </Grid>
 </Window>
