--- a/GazdalkodjOkosan/Gazdalkodj_Okosan/MainWindow.xaml
+++ b/GazdalkodjOkosan/Gazdalkodj_Okosan/MainWindow.xaml
@@ -1,9 +1,52 @@
 ﻿<Window x:Class="Gazdalkodj_Okosan.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="768" Width="1024" AllowDrop="False" Background="{x:Null}">
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="/Gazdalkodj_Okosan;component/img/main.png" />
+        </Grid.Background>
         <Button Content="Játék indítása" Height="23" HorizontalAlignment="Left" Margin="27,22,0,0" Name="button1" VerticalAlignment="Top" Width="88" Click="button1_Click" />
         <Button Content="Csatlakozás egy játékhoz" Height="23" HorizontalAlignment="Right" Margin="0,22,62,0" Name="button2" VerticalAlignment="Top" Width="142" Click="button2_Click" />
+        <Grid Name="MainButtonGrid" Visibility="Visible">
+            <Grid Margin="314,268,0,0">
+                <Ellipse Height="100" HorizontalAlignment="Left"  Name="NewGameEllipse" Stroke="#FFAF0000" VerticalAlignment="Top" Width="335" Fill="#FFD70000" Cursor="Hand" MouseDown="NewGameEllipse_MouseDown" />
+                <TextBlock Name="NewGameText" Text="Új Játék" FontSize="48" Foreground="White" FontFamily="ChessmasterX" Margin="85,20,0,0" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top" Cursor="Hand" MouseDown="NewGameText_MouseDown" />
+            </Grid>
+            <Grid Margin="314,416,0,0">
+                <Ellipse Fill="#FFD70000" Height="100" HorizontalAlignment="Left"  Name="ConnectToEllipse" Stroke="#FFAF0000" VerticalAlignment="Top" Width="335" Cursor="Hand" MouseDown="ConnectToEllipse_MouseDown" />
+                <TextBlock Name="ConnectToText" Text="Csatlakozás " FontSize="48" Foreground="White" FontFamily="ChessmasterX" Margin="42,20,0,0" Width="250" HorizontalAlignment="Left" VerticalAlignment="Top" Cursor="Hand" MouseDown="ConnectToText_MouseDown" />
+            </Grid>
+            <Grid Margin="314,564,0,0">
+                <Ellipse Fill="#FFD70000" Height="100" HorizontalAlignment="Left"  Name="QuitEllipse" Stroke="#FFAF0000" VerticalAlignment="Top" Width="335" Cursor="Hand" MouseDown="QuitEllipse_MouseDown" />
+                <TextBlock Name="QuitGameText" Text="Kilépés" FontSize="48" Foreground="White" FontFamily="ChessmasterX" Margin="85,20,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Cursor="Hand" MouseDown="QuitGameText_MouseDown" />
+            </Grid>
+        </Grid>
+        <Grid Name="ConnectionGrid" Visibility="Hidden">
+            <Grid Name="ConnectGrid1">
+                <Rectangle Height="99" HorizontalAlignment="Left" Margin="93,298,0,0" Name="P1Rect" Stroke="Black" VerticalAlignment="Top" Width="206" Fill="Cornsilk" />
+                <TextBlock Name="P1StatusText"/>
+            </Grid>
+            <Grid Name="ConnectGrid2">
+                <Rectangle Fill="Cornsilk" Height="99" HorizontalAlignment="Left" Margin="93,429,0,0" Name="P2Rect" Stroke="Black" VerticalAlignment="Top" Width="206" />
+                <TextBlock Name="P2StatusText"/>
+            </Grid>
+            <Grid Name="ConnectGrid3">
+                 <Rectangle Fill="Cornsilk" Height="99" HorizontalAlignment="Left" Margin="93,560,0,0" Name="P3Rect" Stroke="Black" VerticalAlignment="Top" Width="206" />
+                <TextBlock Name="P3StatusText"/>
+            </Grid>
+            <Grid Name="ConnectGrid4">
+                <Rectangle Fill="Cornsilk" Height="99" HorizontalAlignment="Left" Margin="700,298,0,0" Name="P4Rect" Stroke="Black" VerticalAlignment="Top" Width="206" />
+                <TextBlock Name="P4StatusText"/>
+            </Grid>
+            <Grid Name="ConnectGrid5">
+                <Rectangle Fill="Cornsilk" Height="99" HorizontalAlignment="Left" Margin="700,429,0,0" Name="P5Rect" Stroke="Black" VerticalAlignment="Top" Width="206" />
+                <TextBlock Name="P5StatusText"/>
+            </Grid>
+            <Grid Name="ConnectGrid6">
+                <Rectangle Fill="Cornsilk" Height="99" HorizontalAlignment="Left" Margin="700,560,0,0" Name="P6Rect" Stroke="Black" VerticalAlignment="Top" Width="206" />
+                <TextBlock Name="P6StatusText"/>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
