--- a/trunk/GazdalkodjOkosan/Gazdalkodj_Okosan/BoardWindow.xaml
+++ b/trunk/GazdalkodjOkosan/Gazdalkodj_Okosan/BoardWindow.xaml
@@ -1,20 +1,26 @@
 ﻿<Window x:Class="Gazdalkodj_Okosan.BoardWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="BoardWindow" Height="768" Width="1024">
+        Title="BoardWindow" Height="768" Width="1024" ResizeMode="NoResize">
     <Window.Background>
-        <ImageBrush ImageSource="img/Board.png"  Stretch="None" TileMode="None" />
+        <ImageBrush ImageSource="img/MoneyBoard.png"  Stretch="None" TileMode="None" />
     </Window.Background>
     <Grid>
-        <Canvas>
-            <Ellipse Height="20" HorizontalAlignment="Left" Canvas.Left="800" Canvas.Top="544" Margin="0,0,0,0" Name="Player1Piece" Stroke="Black" VerticalAlignment="Top" Width="20" Fill="Red" />
-            <Ellipse Fill="Orange" Height="20" HorizontalAlignment="Left" Canvas.Left="800" Canvas.Top="564" Margin="0,0,0,0" Name="Player2Piece" Stroke="Black" VerticalAlignment="Top" Width="20" />
-            <Ellipse Fill="Yellow" Height="20" HorizontalAlignment="Left" Canvas.Left="800" Canvas.Top="584" Margin="0,0,0,0" Name="Player3Piece" Stroke="Black" VerticalAlignment="Top" Width="20" />
+        <Canvas Name="outer">
+            <Ellipse Height="20" HorizontalAlignment="Left" Canvas.Left="840" Canvas.Top="516" Margin="0,0,0,0" Name="Player1Piece" Stroke="Black" VerticalAlignment="Top" Width="20" Fill="Red" />
+            <Ellipse Fill="Blue" Height="20" HorizontalAlignment="Left" Canvas.Left="870" Canvas.Top="470" Margin="0,0,0,0" Name="Player2Piece" Stroke="Black" VerticalAlignment="Top" Width="20" />
+            <Ellipse Fill="Yellow" Height="20" HorizontalAlignment="Left" Canvas.Left="870" Canvas.Top="500" Margin="0,0,0,0" Name="Player3Piece" Stroke="Black" VerticalAlignment="Top" Width="20" />
             <Button Canvas.Left="6" Canvas.Top="69" Content="Dob" Height="49" Name="button1" Width="51" Click="button1_Click" />
-            <Ellipse Canvas.Left="800" Canvas.Top="604" Fill="Green" Height="20" Name="Player4Piece" Stroke="Black" Width="20" />
-            <Ellipse Canvas.Left="800" Canvas.Top="624" Fill="Blue" Height="20" Name="Player5Piece" Stroke="Black" Width="20" />
-            <Ellipse Canvas.Left="800" Canvas.Top="644" Fill="Violet" Height="20" Name="Player6Piece" Stroke="Black" Width="20" />
-            <Ellipse Canvas.Left="169" Canvas.Top="169" Fill="Red" Height="20" Name="ellipse1" Stroke="Black" Width="20" />
+            <Ellipse Canvas.Left="810" Canvas.Top="470" Fill="Green" Height="20" Name="Player4Piece" Stroke="Black" Width="20" />
+            <Ellipse Canvas.Left="810" Canvas.Top="500" Fill="Orange" Height="20" Name="Player5Piece" Stroke="Black" Width="20" />
+            <Ellipse Canvas.Left="840" Canvas.Top="450" Fill="Violet" Height="20" Name="Player6Piece" Stroke="Black" Width="20" />
+            <Image Canvas.Left="405" Canvas.Top="70" Height="520" Name="SquareImage" Stretch="Fill" Width="200" Visibility="Hidden" MouseDown="SquareImage_MouseDown" Cursor="Hand" SizeChanged="SquareImage_SizeChanged" />
+            <Canvas Name="HouseCanvas" Canvas.Top="2000" Height="572" Width="835" Canvas.Left="375" Visibility="Visible" >
+                <Canvas.Background >
+                    <ImageBrush ImageSource="img/EmptyHouse.jpg"  Stretch="Fill" TileMode="None" />
+                </Canvas.Background>
+            </Canvas>
+            <Image Canvas.Left="585" Canvas.Top="615" Height="85" Name="ImageOfHouse" Stretch="Fill" Width="124" MouseLeftButtonDown="ImageOfHouse_MouseLeftButtonDown" Cursor="Hand" />
         </Canvas>
     </Grid>
 </Window>
