--- a/trunk/GazdalkodjOkosan/Gazdalkodj_Okosan/MainWindow.xaml
+++ b/trunk/GazdalkodjOkosan/Gazdalkodj_Okosan/MainWindow.xaml
@@ -1,23 +1,26 @@
 ﻿<Window x:Class="Gazdalkodj_Okosan.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="768" Width="1024" AllowDrop="False" Background="{x:Null}">
+        Title="MainWindow" Height="768" Width="1024" AllowDrop="False" Background="{x:Null}" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="/Gazdalkodj_Okosan;component/img/main.png" />
         </Grid.Background>
         <Grid Name="MainButtonGrid" Visibility="Visible">
+            <Grid.Background>
+                <ImageBrush ImageSource="/Gazdalkodj_Okosan;component/img/main.png" />
+            </Grid.Background>
             <Grid Margin="314,268,0,0">
-                <Ellipse Height="100" HorizontalAlignment="Left"  Name="NewGameEllipse" Stroke="#FFAF0000" VerticalAlignment="Top" Width="335" Fill="#FFD70000" Cursor="Hand" MouseDown="NewGameEllipse_MouseDown" />
-                <TextBlock Name="NewGameText" Text="Új Játék" FontSize="48" Foreground="White" FontFamily="ChessmasterX" Margin="85,20,0,0" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top" Cursor="Hand" MouseDown="NewGameText_MouseDown" />
+                <Ellipse Height="100" HorizontalAlignment="Left"  Name="NewGameEllipse" Stroke="#FFAF0000" VerticalAlignment="Top" Width="335" Fill="#FFD70000" Cursor="Hand" MouseDown="NewGameEllipse_MouseDown" MouseEnter="NewGameEllipse_MouseEnter" MouseLeave="NewGameEllipse_MouseLeave" />
+                <TextBlock Name="NewGameText" Text="Új Játék" FontSize="48" Foreground="White" FontFamily="ChessmasterX" Margin="85,20,0,0" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top" Cursor="Hand" MouseDown="NewGameText_MouseDown" MouseEnter="NewGameText_MouseEnter" />
             </Grid>
             <Grid Margin="314,416,0,0">
-                <Ellipse Fill="#FFD70000" Height="100" HorizontalAlignment="Left"  Name="ConnectToEllipse" Stroke="#FFAF0000" VerticalAlignment="Top" Width="335" Cursor="Hand" MouseDown="ConnectToEllipse_MouseDown" />
-                <TextBlock Name="ConnectToText" Text="Csatlakozás " FontSize="48" Foreground="White" FontFamily="ChessmasterX" Margin="42,20,0,0" Width="250" HorizontalAlignment="Left" VerticalAlignment="Top" Cursor="Hand" MouseDown="ConnectToText_MouseDown" />
+                <Ellipse Fill="#FFD70000" Height="100" HorizontalAlignment="Left"  Name="ConnectToEllipse" Stroke="#FFAF0000" VerticalAlignment="Top" Width="335" Cursor="Hand" MouseDown="ConnectToEllipse_MouseDown" MouseEnter="ConnectToEllipse_MouseEnter" MouseLeave="ConnectToEllipse_MouseLeave" />
+                <TextBlock Name="ConnectToText" Text="Csatlakozás " FontSize="48" Foreground="White" FontFamily="ChessmasterX" Margin="42,20,0,0" Width="250" HorizontalAlignment="Left" VerticalAlignment="Top" Cursor="Hand" MouseDown="ConnectToText_MouseDown" MouseEnter="ConnectToText_MouseEnter" />
             </Grid>
             <Grid Margin="314,564,0,0">
-                <Ellipse Fill="#FFD70000" Height="100" HorizontalAlignment="Left"  Name="QuitEllipse" Stroke="#FFAF0000" VerticalAlignment="Top" Width="335" Cursor="Hand" MouseDown="QuitEllipse_MouseDown" />
-                <TextBlock Name="QuitGameText" Text="Kilépés" FontSize="48" Foreground="White" FontFamily="ChessmasterX" Margin="85,20,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Cursor="Hand" MouseDown="QuitGameText_MouseDown" />
+                <Ellipse Fill="#FFD70000" Height="100" HorizontalAlignment="Left"  Name="QuitEllipse" Stroke="#FFAF0000" VerticalAlignment="Top" Width="335" Cursor="Hand" MouseDown="QuitEllipse_MouseDown" MouseEnter="QuitEllipse_MouseEnter" MouseLeave="QuitEllipse_MouseLeave" />
+                <TextBlock Name="QuitGameText" Text="Kilépés" FontSize="48" Foreground="White" FontFamily="ChessmasterX" Margin="85,20,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Cursor="Hand" MouseDown="QuitGameText_MouseDown" MouseEnter="QuitGameText_MouseEnter" />
             </Grid>
         </Grid>
         <Grid Name="ConnectionGrid" Visibility="Hidden">
@@ -28,7 +31,7 @@
             </Grid>
             <Grid Name="ConnectGrid2" Margin="93,429,0,0">
                 <Rectangle Fill="Cornsilk" Height="99" HorizontalAlignment="Left"  Name="P2Rect" Stroke="Black" VerticalAlignment="Top" Width="206" />
-                <TextBlock Name="P2StatusText" FontSize="14" Foreground="Orange" FontFamily="ChessmasterX" Margin="15,10,0,0" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <TextBlock Name="P2StatusText" FontSize="14" Foreground="Blue" FontFamily="ChessmasterX" Margin="15,10,0,0" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             </Grid>
             <Grid Name="ConnectGrid3" Margin="93,560,0,0">
                  <Rectangle Fill="Cornsilk" Height="99" HorizontalAlignment="Left"  Name="P3Rect" Stroke="Black" VerticalAlignment="Top" Width="206" />
@@ -40,7 +43,7 @@
             </Grid>
             <Grid Name="ConnectGrid5" Margin="700,429,0,0">
                 <Rectangle Fill="Cornsilk" Height="99" HorizontalAlignment="Left" Name="P5Rect" Stroke="Black" VerticalAlignment="Top" Width="206" />
-                <TextBlock Name="P5StatusText" FontSize="14" Foreground="Blue" FontFamily="ChessmasterX" Margin="15,10,0,0" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <TextBlock Name="P5StatusText" FontSize="14" Foreground="Orange" FontFamily="ChessmasterX" Margin="15,10,0,0" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             </Grid>
             <Grid Name="ConnectGrid6" Margin="700,560,0,0">
                 <Rectangle Fill="Cornsilk" Height="99" HorizontalAlignment="Left"  Name="P6Rect" Stroke="Black" VerticalAlignment="Top" Width="206" />
